force-app/main/default/objects/ICS_Decision_Reason__c/ICS_Decision_Reason__c.object-meta.xml
<CustomObject>
    <label>ICS Decision Reason</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>ICS Decision Reason Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICS Decision Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>