force-app/main/default/objects/ICS_Decision_Reason__c/fields/ICS_Application_Request__c.field-meta.xml
<CustomField>
    <fullName>ICS_Application_Request__c</fullName>
    <label>ICS Application Request</label>
    <referenceTo>ICS_Application__c</referenceTo>
    <relationshipLabel>ICS Decision Reasons</relationshipLabel>
    <relationshipName>ICS_Decision_Reasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>