force-app/main/default/objects/ICS_Decision_Reason__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>